--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h2 class="footer__copyright">&copy; 2020 Mesto Russia</h2>
     </footer>
 
-    <div class="modal">
+    <div class="modal modal_edit_profile">
         <div class="modal__content">
             <button type="button" class="modal__close-button" aria-label="Закрыть окно"></button>
             <h2 class="modal__header"></h2>
@@ -46,6 +46,19 @@
             </form>
         </div>
     </div>
+    <div class="modal modal_add_card">
+        <div class="modal__content">
+            <button type="button" class="modal__close-button" aria-label="Закрыть окно"></button>
+            <h2 class="modal__header"></h2>
+            <form name="add-card" action="#" class="modal__form">
+                <input name="input-name" type="text" value="" required placeholder="" class="modal__input modal__input_name">
+                <input name="input-profession" type="text" value="" required placeholder=""
+                    class="modal__input modal__input_profession">
+                <button type="submit" class="modal__save">Сохранить</button>
+            </form>
+        </div>
+    </div>
+
 
     <template class="template-card">
         <div class="cards">
