--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <div class="modal modal_look-photo modal_close">
     <div class="modal__content-zoom">
         <button type="button" class="modal__close-button" aria-label="Закрыть окно"></button>
-        <img class="modal__photo-zoom">
+        <img class="modal__photo-zoom" src="#" alt="">
         <p class="modal__photo-signature"></p>
     </div>
 </div>
@@ -69,7 +69,7 @@
 <template class="template-card">
     <div class="cards">
         <button type="button" class="cards__trash" aria-label="Удалить"></button>
-        <img class="cards__photo">
+        <img class="cards__photo" src="" alt="">
         <div class="cards__title">
             <h2 class="cards__title-style cards__title_text_ellipsis"></h2>
             <button type="button" class="cards__like" aria-label="Лайкнуть"></button>
