--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     class="modal__input modal__input_profession" autocomplete="off">
                 <span class="modal__error_visible" id="input-profession-error"></span>
             </label>
-            <button type="submit" class="modal__save modal__save_state_invalid">Сохранить</button>
+            <button type="submit" class="modal__save">Сохранить</button>
         </form>
     </div>
 </div>
@@ -89,9 +89,9 @@
     </div>
 </template>
 
+<script src="script/initial-cards.js"></script>
 <script src="script/validate.js"></script>
 <script src="script/idex.js"></script>
-
 
   </body>
 </html>
