--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 <script src="script/initial-cards.js"></script>
 <script src="script/validate.js"></script>
-<script src="script/idex.js"></script>
+<script src="script/index.js"></script>
 
   </body>
 </html>
