--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
 </template>
 
 <script src="script/initial-cards.js"></script>
-<script src="script/validate.js"></script>
-<script src="script/index.js"></script>
-
+<script type="module" src="script/data.js"></script>
+<script type="module" src="script/index.js"></script>
+<script type="module" src="script/FormValidator.js"></script>
+<script type="module" src="script/Card.js"></script>
   </body>
 </html>
