--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="pages/index.css">
-  <meta name="description" content="Пятый самостоятельный проект на Яндекс практикуме">
+  <meta name="description" content="Седьмой самостоятельный проект на Яндекс практикуме">
   <meta name="author" content="Попов Роман">
   <title>Проект Место</title>
   </head>
